--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "validator": "^9.4.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   }
