--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --mode=development --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack --mode=development",
+    "dev-server": "webpack-dev-server --mode=development"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -20,6 +20,7 @@
     "react-dom": "^16.3.2",
     "validator": "^9.4.1",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
