--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "live-server": "^1.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-modal": "^3.4.1",
     "validator": "^9.4.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
